# docket

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  azure-pipelines.yml  index.html  search_index.json  style.css
.agent/skills/rust-asset-embedding/: SKILL.md
.github/workflows/: container.yml  pages.yml
assets/: dark.js  nav.js  permalink.js  search.js  style.css
configuration/: index.html
docs/: .snooper.toml  01-installation.md  02-useage.md  03-configuration.md  04-markdown-features.md  footer.md  index.md
docs/design-documents/: 01-new-design.md  02-toculate.md  03-highlight.md  04-layouts.md  05-doctree.md  README.md
examples/: mddump.rs  synnames.rs
installation/: index.html
markdown-features/: index.html
src/: args.rs  asset.rs  baler.rs  docket.rs  doctree.rs  error.rs  highlight.rs  index.rs  main.rs  page.rs  render.rs  renderable.rs  renderer.rs  search.rs  toc.rs  util.rs  utils.rs
src/legacy/: asset.rs  docket.rs  index.rs  mod.rs  page.rs  renderable.rs  renderer.rs  search.rs  toc.rs  util.rs
src/render/: layout.rs
src/render/layout/: html.rs
useage/: index.html
