[package]
name = "docket"
version = "0.3.0"
description = "Simple markdown to HTML documentation rendering"
readme = "README.md"
license-file = "LICENSE"
homepage = "https://iwillspeak.github.io/docket"
repository = "https://github.com/iwillspeak/docket"
authors = ["Will Speak <lithiumflame@gmail.com>"]
edition = "2018"

[dependencies]
pulldown-cmark = "0.4"
docopt = "1.1"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.6"
failure = "0.1"
notify = "4.0"
rayon = "1.0"