[package]
name = "docket"
version = "0.6.1"
description = "Simple markdown to HTML documentation rendering"
readme = "README.md"
license-file = "LICENSE"
homepage = "https://iwillspeak.github.io/docket"
repository = "https://github.com/iwillspeak/docket"
authors = ["Will Speak <lithiumflame@gmail.com>"]
edition = "2021"

[dependencies]
pulldown-cmark = { version= "0.9", default_features = false }
docopt = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.9"
syntect = { version = "5.0", optional = true }
lazy_static = { version = "1.4", optional = true }
notify = { version = "4.0", optional = true }

[features]
default = [ "watch", "syntect-hl" ]

# File system watching
watch = [ "notify" ]

# Sytnax highlighting with syntect
syntect-hl = [ "lazy_static", "syntect" ]
